# pointosr

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  requirements.txt  run_all_models.sh  setup.py
cmake/: pythonpath.sh
osr/: README.md  __init__.py  build_prototypes.py  evaluate_osr.py  extract_features.py  osr_classifier.py  visualize_predictions.py
osr/model/: __init__.py  pointnext_wrapper.py
osr/models/: __init__.py
pointnext/cfgs/: default.yaml  pointnext-s.yaml
pointnext/classification/: main.py  train.py
pointnext/dataset/: __init__.py  build.py
pointnext/dataset/human/: __init__.py  human.py
pointnext/dataset/human/preprocess/: create_splits.py  label_all_human.py  move_false_clusters.py  visualize_raw_data.py
pointnext/dataset/human/utils/: click_human.py  create_splits.py  excel_labels.py  point_cloud_format.py  rename_files.py  txt_labels.py  visualize_raw_data.py
pointnext/dataset/unlabeled/: eval_unlabeled.py  unlabeled.py  visualize_eval_unlabeled.py
pointnext/loss/: build.py
pointnext/model/: __init__.py  build.py
pointnext/model/backbone/: pointnext.py
pointnext/model/layers/: __init__.py  activation.py  group.py  subsample.py  upsampling.py
pointnext/scheduler/: __init__.py
pointnext/transforms/: false_positive_augmentation.py
pointosr/: CMakeLists.txt  package.xml  setup.py
pointosr/osr/: ablation_config.json  ablation_study_pipeline_results.json  compute_raw_scores.py  eval_wrapper.py  fusion_optimization.py  generate_prototypes.py  generate_prototypes_ablation.py  online_calibration_manager.py  run_ablation_calibration.py  run_ablation_evaluation.py  run_ablation_study.py  score_normalization.py  temperature_calibration.py  unified_calibration.py  validate_prototypes.py
pointosr/pointnext/cfgs/: default.yaml  osr_config.yaml  osr_eval.yaml  pointnext-s.yaml
pointosr/pointnext/classification/: main.py  osr_eval.py  train.py
pointosr/pointnext/dataset/: build.py
pointosr/pointnext/dataset/human/: human.py  human_16.py  human_8.py  human_9ld.py  human_9mnd.py
pointosr/pointnext/dataset/human/utils/: create_splits.py  visualize_raw_data.py
pointosr/pointnext/dataset/online/: inference.py  online_classification.py
pointosr/pointnext/eval/: profile.py
pointosr/pointnext/features/: __init__.py  fpfh_features.py  geometry_features.py
pointosr/pointnext/loss/: __init__.py
pointosr/pointnext/model/backbone/: __init__.py
pointosr/pointnext/optim/: __init__.py  optim_factory.py
pointosr/pointnext/scheduler/: scheduler_factory.py
pointosr_ros/: CMakeLists.txt  package.xml
pointosr_ros/launch/: classification.launch  count_clusters.launch  inference.launch  live_inference.launch
pointosr_ros/msg/: PointCloud2Array.msg  classification_batch.msg  cluster_and_cls.msg
pointosr_ros/scripts/: batch_monitor.py  classification_node.py  classification_node_backup.py  count_clusters.py  dynamic_inference.sh  inference.sh  inference_node.py  multiplexer_node.py  osr_pipeline_diagnostics.py  osr_scorer.py  run_online_calibration.py  test_classification_node.py  test_osr_integration.py  update_val_batch_size.py
