<?xml version="1.0"?>
<package format="2">
  <name>pointosr_ros</name>
  <version>0.0.1</version>
  <description>Point Cloud Open Set Recognition</description>

  <maintainer email="dylanleong813@gmail.com">Dylan Leong</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>pointosr</depend>

  <exec_depend>python3</exec_depend>

  <export/>
</package>
